[package]
name = "relaxed-queues"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
core_affinity = "0.8.1"
crossbeam-queue = "0.3.11"
haphazard = "0.1.8"
lockfree = "0.5.1"
rand = "*"
concurrent-queue = "2.5.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

